# frugal-flows

./: README.md  Univariate_Conditional.ipynb  clean_playground.ipynb  environment.yaml  frugal_flexible_causal_effect.ipynb  github_issue.ipynb  install_rpy2_libraries.py  investigate_sample_outcome.ipynb  marginal_independent_uniforms.ipynb  proof_of_concept.ipynb  pyproject.toml  simulate_y.ipynb
data/: README.md  create_sim_data.py  data_xcyc.csv  data_xcyd.csv  data_xdyc.csv  data_xdyd.csv  download_STAR_and_Lalonde.R  hyperparam_and_bootstrapping.py  run_all_simulations.py  run_hyperparam_search.py  template_causl_simulations.py
data/analysis/: README.md  requirements.txt  run_bootstrapping.ipynb  validationMethods.py
deep_copula_frugal/: __init__.py  myrun.py
frugal_flows/: __init__.py  basic_flows.py  benchmarking.py  causal_flows.py  clean_playground.ipynb  flows.py  playground.ipynb  playground_distrax.ipynb  sample_marginals.py  sample_outcome.py  train_quantile_propensity_score.py
frugal_flows/bijections/: __init__.py  loc_cond.py  masked_autoregressive_first_uniform.py  masked_autoregressive_heterogeneous.py  masked_autoregressive_masked_cond.py  masked_autoregressive_transformer_cond.py  masked_independent.py  rational_quadratic_spline_cond.py  univariate_normal_cdf.py
validation/: CTS_Synth_hyperparameter_search.ipynb  Continous_Frugal_Flows.ipynb  DISCRETE_Synth_hyperparameter_search-Copy1.ipynb  FullDISCRETE_Synth_hyperparameter_search.ipynb  Lalonde_Data_Pipeline.ipynb  Logistic_Sampling.ipynb  Marginal_Flow_checks.ipynb  Mixed_Data_Frugal_Flows.ipynb  Simulated_Data_Pipeline.ipynb  SparseDISCRETE_Synth_hyperparameter_search-Copy1.ipynb  Testing_New_Updates.ipynb  benchmarking.py  demo_of_shape_issue.ipynb  e401k_Data_Pipeline.ipynb  e401k_hyperparam_search.ipynb  lalonde_hyperparam_search.ipynb  realworld_inference.ipynb  simulation_hyperparameter_search.ipynb  validating_e401k_datagen.ipynb  validating_lalonde_datagen.ipynb  validationMethods.py
validation/data_processing_and_simulations/: README.md  causl_sim_data_generation.py  filtered_401k_data.csv  filtered_STAR_dataset.csv  run_all_simulations.py
